--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,7 @@
 body {
   /* background-color: #393540; */
   background-color: white;
+  overflow-x: hidden;
 }
 
 button {
@@ -60,4 +61,13 @@ a {
 
 a:hover {
   color: #4361ee;
+}
+
+ul{
+  padding: 0;
+  margin: 0;
+}
+
+li{
+  list-style: none;
 }
