--- a/client/src/pages/job/style/LayoutJob.scss
+++ b/client/src/pages/job/style/LayoutJob.scss
@@ -42,6 +42,7 @@ $gradient-accent: linear-gradient(135deg, #f72585 0%, #b5179e 100%);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     width: 100vw;
     overflow-x: hidden;
+    // overflow-y: hidden
 }
 
 .layout_header {
