--- a/client/src/pages/job/style/LayoutJob.scss
+++ b/client/src/pages/job/style/LayoutJob.scss
@@ -171,6 +171,7 @@ section {
         padding: 0 3%;
         height: 60px;
         font-size: 0.9rem;
+
         .skilzyy_navigation ul {
             gap: 0.5rem;
         }
@@ -193,5 +194,41 @@ section {
 
     section {
         padding: 1.5rem 2%;
+    }
+}
+
+.account_dropdown {
+    position: absolute;
+    top: 100%;
+    right: 2rem;
+    width: 10rem;
+    background-color: $white-color;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    border-radius: $border-radius;
+    margin-top: 0.5rem;
+    z-index: 1000;
+
+    .dropdownmenu {
+        list-style: none;
+        margin: 0;
+        padding: 0.5rem 0;
+        display: flex;
+        flex-direction: column;
+
+        li {
+            width: 100%;
+            padding: 0rem 1.5rem;
+            text-align: center;
+            white-space: nowrap;
+            color: $text-color;
+            font-weight: 500;
+            cursor: pointer;
+            transition: $transition;
+
+            &:hover {
+                background-color: $light-color;
+                color: $primary-color;
+            }
+        }
     }
 }
