--- a/client/src/pages/job/style/ApplicantJobCard.scss
+++ b/client/src/pages/job/style/ApplicantJobCard.scss
@@ -55,9 +55,13 @@ $box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
                 color: $secondary-color;
             }
             
-            &.inactive {
+            &.pending {
                 background: rgba(gray, 0.2);
                 color: gray;
+            }
+            &.closed {
+                background: rgba(red, 0.2);
+                color: red;
             }
         }
 
