--- a/client/src/pages/job/style/MyJobs.scss
+++ b/client/src/pages/job/style/MyJobs.scss
@@ -10,6 +10,7 @@
   margin: 0 auto;
 
   .posted_job_card {
+    cursor: pointer;
     background: white;
     border-radius: 0.5rem;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
