--- a/client/src/pages/job/style/GovJobCard.scss
+++ b/client/src/pages/job/style/GovJobCard.scss
@@ -29,7 +29,7 @@
       margin-bottom: 1rem;
 
       img {
-        width: 100%;
+        height: 100%;
         height: auto;
         object-fit: cover;
       }
